--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - 'feat/**'
 permissions:
   contents: read
   id-token: write
@@ -28,6 +27,9 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          token_format: 'access_token'
+          access_token_lifetime: '3600s'
+          export_environment_variables: true
 
       - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -39,7 +41,7 @@ jobs:
         run: |
           IMAGE_URI="${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.ARTIFACT_REPOSITORY }}/${{ env.CLOUD_RUN_SERVICE }}:${{ github.sha }}"
           echo "IMAGE_URI=$IMAGE_URI" >> "$GITHUB_ENV"
-          gcloud builds submit --tag "$IMAGE_URI"
+          gcloud builds submit --tag "$IMAGE_URI" --quiet
 
       - name: Deploy to Cloud Run
         run: |
