--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,7 +41,22 @@ jobs:
         run: |
           IMAGE_URI="${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.ARTIFACT_REPOSITORY }}/${{ env.CLOUD_RUN_SERVICE }}:${{ github.sha }}"
           echo "IMAGE_URI=$IMAGE_URI" >> "$GITHUB_ENV"
-          gcloud builds submit --tag "$IMAGE_URI" --quiet
+          BUILD_ID=$(gcloud builds submit --tag "$IMAGE_URI" --async --format='value(name)')
+          echo "BUILD_ID=$BUILD_ID" >> "$GITHUB_ENV"
+
+      - name: Wait for Cloud Build
+        run: |
+          echo "Waiting for Cloud Build $BUILD_ID"
+          while true; do
+            STATUS=$(gcloud builds describe "$BUILD_ID" --format='value(status)')
+            echo "Build status: $STATUS"
+            if [[ "$STATUS" == "SUCCESS" ]]; then
+              break
+            elif [[ "$STATUS" == "FAILURE" || "$STATUS" == "CANCELLED" ]]; then
+              exit 1
+            fi
+            sleep 10
+          done
 
       - name: Deploy to Cloud Run
         run: |
